// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover styles should render popover on auto 1`] = `
.circuit-2 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #1A1A1A;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-2:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-2:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
  z-index: 1;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2:active {
  background-color: #E6E6E6;
}

.circuit-2:disabled {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  margin-right: 8px;
}

@media (max-width:479px) {
  .circuit-0 {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0,0,0,0.4);
    pointer-events: none;
  }
}

.circuit-4 {
  padding: 8px 0px;
  border: 1px solid #E6E6E6;
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #FFF;
  box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2);
}

@media (max-width:479px) {
  .circuit-4 {
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

.circuit-3 {
  display: block;
  width: 100%;
  border: 1px solid #CCC;
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

<div>
  <div>
    <button
      aria-controls="popover_13"
      aria-haspopup="true"
      id="trigger_14"
    >
      Button
    </button>
  </div>
  <div
    class="circuit-0"
  />
  <div
    aria-labelledby="trigger_14"
    class="circuit-4"
    id="popover_13"
    role="menu"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <button
      class="circuit-2"
      role="menuitem"
    >
      <svg
        class="circuit-1"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            clip-rule="evenodd"
            d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zm1 5a1 1 0 10-2 0v2H5a1 1 0 100 2h2v2a1 1 0 002 0V9h2a1 1 0 100-2H9V5z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </g>
      </svg>
      Add
    </button>
    <hr
      class="circuit-3"
    />
  </div>
</div>
`;

exports[`Popover styles should render popover on bottom 1`] = `
.circuit-2 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #1A1A1A;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-2:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-2:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
  z-index: 1;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2:active {
  background-color: #E6E6E6;
}

.circuit-2:disabled {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  margin-right: 8px;
}

@media (max-width:479px) {
  .circuit-0 {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0,0,0,0.4);
    pointer-events: none;
  }
}

.circuit-4 {
  padding: 8px 0px;
  border: 1px solid #E6E6E6;
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #FFF;
  box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2);
}

@media (max-width:479px) {
  .circuit-4 {
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

.circuit-3 {
  display: block;
  width: 100%;
  border: 1px solid #CCC;
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

<div>
  <div>
    <button
      aria-controls="popover_29"
      aria-haspopup="true"
      id="trigger_30"
    >
      Button
    </button>
  </div>
  <div
    class="circuit-0"
  />
  <div
    aria-labelledby="trigger_30"
    class="circuit-4"
    id="popover_29"
    role="menu"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <button
      class="circuit-2"
      role="menuitem"
    >
      <svg
        class="circuit-1"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            clip-rule="evenodd"
            d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zm1 5a1 1 0 10-2 0v2H5a1 1 0 100 2h2v2a1 1 0 002 0V9h2a1 1 0 100-2H9V5z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </g>
      </svg>
      Add
    </button>
    <hr
      class="circuit-3"
    />
  </div>
</div>
`;

exports[`Popover styles should render popover on left 1`] = `
.circuit-2 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #1A1A1A;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-2:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-2:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
  z-index: 1;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2:active {
  background-color: #E6E6E6;
}

.circuit-2:disabled {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  margin-right: 8px;
}

@media (max-width:479px) {
  .circuit-0 {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0,0,0,0.4);
    pointer-events: none;
  }
}

.circuit-4 {
  padding: 8px 0px;
  border: 1px solid #E6E6E6;
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #FFF;
  box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2);
}

@media (max-width:479px) {
  .circuit-4 {
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

.circuit-3 {
  display: block;
  width: 100%;
  border: 1px solid #CCC;
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

<div>
  <div>
    <button
      aria-controls="popover_37"
      aria-haspopup="true"
      id="trigger_38"
    >
      Button
    </button>
  </div>
  <div
    class="circuit-0"
  />
  <div
    aria-labelledby="trigger_38"
    class="circuit-4"
    id="popover_37"
    role="menu"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <button
      class="circuit-2"
      role="menuitem"
    >
      <svg
        class="circuit-1"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            clip-rule="evenodd"
            d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zm1 5a1 1 0 10-2 0v2H5a1 1 0 100 2h2v2a1 1 0 002 0V9h2a1 1 0 100-2H9V5z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </g>
      </svg>
      Add
    </button>
    <hr
      class="circuit-3"
    />
  </div>
</div>
`;

exports[`Popover styles should render popover on right 1`] = `
.circuit-2 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #1A1A1A;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-2:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-2:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
  z-index: 1;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2:active {
  background-color: #E6E6E6;
}

.circuit-2:disabled {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  margin-right: 8px;
}

@media (max-width:479px) {
  .circuit-0 {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0,0,0,0.4);
    pointer-events: none;
  }
}

.circuit-4 {
  padding: 8px 0px;
  border: 1px solid #E6E6E6;
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #FFF;
  box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2);
}

@media (max-width:479px) {
  .circuit-4 {
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

.circuit-3 {
  display: block;
  width: 100%;
  border: 1px solid #CCC;
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

<div>
  <div>
    <button
      aria-controls="popover_45"
      aria-haspopup="true"
      id="trigger_46"
    >
      Button
    </button>
  </div>
  <div
    class="circuit-0"
  />
  <div
    aria-labelledby="trigger_46"
    class="circuit-4"
    id="popover_45"
    role="menu"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <button
      class="circuit-2"
      role="menuitem"
    >
      <svg
        class="circuit-1"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            clip-rule="evenodd"
            d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zm1 5a1 1 0 10-2 0v2H5a1 1 0 100 2h2v2a1 1 0 002 0V9h2a1 1 0 100-2H9V5z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </g>
      </svg>
      Add
    </button>
    <hr
      class="circuit-3"
    />
  </div>
</div>
`;

exports[`Popover styles should render popover on top 1`] = `
.circuit-2 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #1A1A1A;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-2:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-2:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
  z-index: 1;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2:active {
  background-color: #E6E6E6;
}

.circuit-2:disabled {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  margin-right: 8px;
}

@media (max-width:479px) {
  .circuit-0 {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0,0,0,0.4);
    pointer-events: none;
  }
}

.circuit-4 {
  padding: 8px 0px;
  border: 1px solid #E6E6E6;
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #FFF;
  box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2);
}

@media (max-width:479px) {
  .circuit-4 {
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

.circuit-3 {
  display: block;
  width: 100%;
  border: 1px solid #CCC;
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

<div>
  <div>
    <button
      aria-controls="popover_21"
      aria-haspopup="true"
      id="trigger_22"
    >
      Button
    </button>
  </div>
  <div
    class="circuit-0"
  />
  <div
    aria-labelledby="trigger_22"
    class="circuit-4"
    id="popover_21"
    role="menu"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <button
      class="circuit-2"
      role="menuitem"
    >
      <svg
        class="circuit-1"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            clip-rule="evenodd"
            d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zm1 5a1 1 0 10-2 0v2H5a1 1 0 100 2h2v2a1 1 0 002 0V9h2a1 1 0 100-2H9V5z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </g>
      </svg>
      Add
    </button>
    <hr
      class="circuit-3"
    />
  </div>
</div>
`;

exports[`Popover styles should render with default styles 1`] = `
.circuit-2 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #1A1A1A;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-2:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-2:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
  z-index: 1;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2:active {
  background-color: #E6E6E6;
}

.circuit-2:disabled {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  margin-right: 8px;
}

@media (max-width:479px) {
  .circuit-0 {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0,0,0,0.4);
    pointer-events: none;
  }
}

.circuit-4 {
  padding: 8px 0px;
  border: 1px solid #E6E6E6;
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #FFF;
  box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2);
}

@media (max-width:479px) {
  .circuit-4 {
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

.circuit-3 {
  display: block;
  width: 100%;
  border: 1px solid #CCC;
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

<div>
  <div>
    <button
      aria-controls="popover_5"
      aria-haspopup="true"
      id="trigger_6"
    >
      Button
    </button>
  </div>
  <div
    class="circuit-0"
  />
  <div
    aria-labelledby="trigger_6"
    class="circuit-4"
    id="popover_5"
    role="menu"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <button
      class="circuit-2"
      role="menuitem"
    >
      <svg
        class="circuit-1"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            clip-rule="evenodd"
            d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zm1 5a1 1 0 10-2 0v2H5a1 1 0 100 2h2v2a1 1 0 002 0V9h2a1 1 0 100-2H9V5z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </g>
      </svg>
      Add
    </button>
    <hr
      class="circuit-3"
    />
  </div>
</div>
`;
